Updated the script link for the HTML donation forms

--- a/donationform.html
+++ b/donationform.html
@@ -1929,7 +1929,7 @@ For hiding recurring payment label ONLY */
     <script language="javascript" type="text/javascript"
         src="https://resources.peta.org/engaging-networks/pages/_shared/js/tip-jar.js"></script>
 
-        <script src="src/js/conversionfile.js"></script>
+        <script src="src/js/conversion-rate.js"></script>
 </body>
 
 </html>
