--- a/donationform3.html
+++ b/donationform3.html
@@ -1356,7 +1356,7 @@ style="
 </noscript>
 <script type="text/javascript" src="https://resources.peta.org/engaging-networks/pages/_shared/js/applepay.js"></script>
 <script language="javascript" type="text/javascript" src="https://resources.peta.org/engaging-networks/pages/_shared/js/tip-jar.js"></script> 
-<script src="src/js/conversionfile.js"></script>
+<script src="src/js/conversion-rate.js"></script>
 </body>
 </html>
 <!-- PE DON EVR GEN 2018-07 Canonical General MONTHLY New Design IXXXWBXXXXG (BRackham):6064:17520:10003 -->
