--- a/donationformlatino.html
+++ b/donationformlatino.html
@@ -1517,7 +1517,7 @@ style="
 <iframe style="width: 100px; height: 100px; border: 0; position: absolute; top: -5000px;" src="https://h.online-metrix.net/tags?org_id=e0j3u9ji&session_id=10003-13f5f134795e4f6c81495d6ce2ec4884-server50011&pageid=1"></iframe>
 </noscript>
 <script type="text/javascript" src="https://resources.peta.org/engaging-networks/pages/_shared/js/applepay-pl.js"></script>
-<script src="src/js/conversionfile.js"></script>
+<script src="src/js/conversion-rate.js"></script>
 </body>
 </html>    
 <!-- PL DON EVR GEN 2017-07 Canonical Latino General Donation IXXXWBXXXPL (ERodriguez)*:2120:1704:10003 -->
